# wav2tapsp

./: README.md  c64tape.py  conftest.py  pyproject.toml  wav2tapsp.py
.github/workflows/: ci.yml  publish.yml
src/wav2tapsp/: __init__.py  __main__.py  analysis.py  c64tape.py  cli.py  convert.py  formats.py
tests/: test_fastloaders.py  test_format.py  test_resolution.py  test_roundtrip.py  test_sample_rate.py
