[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wav2tapsp"
version = "0.2.0"
description = "Convert WAV recordings of Commodore 64 cassette tapes into emulator-readable TAP files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Josh Bailey", email = "josh@vandervecken.com" }]
keywords = ["commodore", "c64", "tape", "tap", "cassette", "wav", "retrocomputing", "emulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: System :: Emulators",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
wav2tapsp = "wav2tapsp.cli:main"

[project.urls]
Homepage = "https://github.com/anarkiwi/wav2tapsp"
Repository = "https://github.com/anarkiwi/wav2tapsp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
